--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-  ],
+, "app/posts/api/api.tsx", "app/posts/page.tsx"  ],
   "exclude": ["node_modules"]
 }
